fix: adjust mobile layout to avoid clipping

--- a/client/src/customer/components/MobileNav/mobile-nav.css
+++ b/client/src/customer/components/MobileNav/mobile-nav.css
@@ -29,23 +29,6 @@
     z-index: 5;
 }
 
-/* .m-nav-bar a {
-    text-decoration: none;
-    color: black;
-    padding: 20px 0;
-}
-
-.m-nav-bar > ul {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    flex-basis: 30%;
-    height: 64px;
-    z-index: 6;
-} */
-
 .m-left-navbar {
     display: flex;
     justify-content: flex-start;
@@ -58,7 +41,7 @@
 
 .m-nav-icon {
     height: 64px;
-    width: 48px;
+    width: 40px;
     display: flex;
     align-items: center;
 }
@@ -104,7 +87,7 @@
 .m-cart-badge {
     position: absolute;
     bottom: 15px;
-    right: 20px;
+    right: 16px;
     height: 16px;
     width: 16px;
     display: flex;
@@ -390,4 +373,10 @@
     align-items: center;
     padding-left: 40px;
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+@media (max-width: 360px) {
+    .m-nav-logo {
+        scale: 0.85;
+    }
 }
